// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration: signin unauthenticated user is prompted to authenticate 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "#24292f",
      "mrkdwn_in": Array [
        "text",
      ],
      "text": ":white_check_mark: Success! <@U2147483697> is now connected to <https://github.com/wilhelmklopp|@wilhelmklopp>",
    },
  ],
  "response_type": "ephemeral",
}
`;

exports[`Integration: signin unauthenticated user is prompted to authenticate 2`] = `
Array [
  Object {
    "createdAt": 2019-01-04T12:30:03.398Z,
    "id": "7718702",
    "login": "wilhelmklopp",
    "updatedAt": 2019-01-04T12:30:03.398Z,
  },
]
`;

exports[`Integration: signin with a pending subscription redirects to install app and creates subscription 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "#24292f",
      "text": "Subscribed to <https://github.com/bkeepers/dotenv|bkeepers/dotenv>",
    },
  ],
  "response_type": "in_channel",
}
`;
